--- a/shots.yml
+++ b/shots.yml
@@ -1,3 +1,3 @@
-# - url: https://github.com/GitRescue/WebShot
+# - url: https://www.google.com/maps/@-32.0322808,115.750168,15z/data=!5m1!1e1?entry=ttu&g_ep=EgoyMDI1MDUxNS4wIKXMDSoASAFQAw%3D%3D
 #   output: shot.png
 #   height: 800
